// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTable.ts should render 1`] = `

<div class="v-data-table theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td colspan="0">
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Rows per page:
      <div role="combobox"
           class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  10
                </div>
                <input aria-label="$vuetify.dataTable.itemsPerPageText"
                       autocomplete="on"
                       readonly="readonly"
                       type="text"
                       aria-readonly="false"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true"
                     class="v-icon material-icons theme--light"
                  >
                    $vuetify.icons.dropdown
                  </i>
                </div>
              </div>
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      –
    </div>
    <div class="v-data-footer__icons-before">
      <button disabled="disabled"
              type="button"
              class="v-btn v-btn--disabled v-btn--fab v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i aria-hidden="true"
             class="v-icon material-icons theme--light"
          >
            $vuetify.icons.prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button disabled="disabled"
              type="button"
              class="v-btn v-btn--disabled v-btn--fab v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i aria-hidden="true"
             class="v-icon material-icons theme--light"
          >
            $vuetify.icons.next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>

`;

exports[`VDataTable.ts should render with data 1`] = `

<div class="v-data-table theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class>
        <col class>
        <col class>
        <col class>
        <col class>
        <col class>
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="Dessert (100g serving)"
              aria-sort="none"
              class="text-xs-left"
          >
            <span>
              Dessert (100g serving)
            </span>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Calories: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-xs-left sortable"
          >
            <span>
              Calories
            </span>
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.sort
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Fat (g): Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-xs-left sortable"
          >
            <span>
              Fat (g)
            </span>
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.sort
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Carbs (g): Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-xs-left sortable"
          >
            <span>
              Carbs (g)
            </span>
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.sort
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Protein (g): Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-xs-left sortable"
          >
            <span>
              Protein (g)
            </span>
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.sort
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Iron (%): Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-xs-left sortable"
          >
            <span>
              Iron (%)
            </span>
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.sort
            </i>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class="text-xs-left">
            Frozen Yogurt
          </td>
          <td class="text-xs-left">
            159
          </td>
          <td class="text-xs-left">
            6
          </td>
          <td class="text-xs-left">
            24
          </td>
          <td class="text-xs-left">
            4
          </td>
          <td class="text-xs-left">
            1%
          </td>
        </tr>
        <tr>
          <td class="text-xs-left">
            Ice cream sandwich
          </td>
          <td class="text-xs-left">
            237
          </td>
          <td class="text-xs-left">
            9
          </td>
          <td class="text-xs-left">
            37
          </td>
          <td class="text-xs-left">
            4.3
          </td>
          <td class="text-xs-left">
            1%
          </td>
        </tr>
        <tr>
          <td class="text-xs-left">
            Eclair
          </td>
          <td class="text-xs-left">
            262
          </td>
          <td class="text-xs-left">
            16
          </td>
          <td class="text-xs-left">
            23
          </td>
          <td class="text-xs-left">
            6
          </td>
          <td class="text-xs-left">
            7%
          </td>
        </tr>
        <tr>
          <td class="text-xs-left">
            Cupcake
          </td>
          <td class="text-xs-left">
            305
          </td>
          <td class="text-xs-left">
            3.7
          </td>
          <td class="text-xs-left">
            67
          </td>
          <td class="text-xs-left">
            4.3
          </td>
          <td class="text-xs-left">
            8%
          </td>
        </tr>
        <tr>
          <td class="text-xs-left">
            Gingerbread
          </td>
          <td class="text-xs-left">
            356
          </td>
          <td class="text-xs-left">
            16
          </td>
          <td class="text-xs-left">
            49
          </td>
          <td class="text-xs-left">
            3.9
          </td>
          <td class="text-xs-left">
            16%
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Rows per page:
      <div role="combobox"
           class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  5
                </div>
                <input aria-label="$vuetify.dataTable.itemsPerPageText"
                       autocomplete="on"
                       readonly="readonly"
                       type="text"
                       aria-readonly="false"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true"
                     class="v-icon material-icons theme--light"
                  >
                    $vuetify.icons.dropdown
                  </i>
                </div>
              </div>
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      1-5 of 10
    </div>
    <div class="v-data-footer__icons-before">
      <button disabled="disabled"
              type="button"
              class="v-btn v-btn--disabled v-btn--fab v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i aria-hidden="true"
             class="v-icon material-icons theme--light"
          >
            $vuetify.icons.prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button type="button"
              class="v-btn v-btn--fab v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i aria-hidden="true"
             class="v-icon material-icons theme--light"
          >
            $vuetify.icons.next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>

`;
